# OpenGL-Renderer

./: .gitignore  .gitmodules  AsteroidRenderer.cpp  AsteroidRenderer.h  CMakeLists.txt  Camera.cpp  Camera.h  CoreShaders.cpp  CoreShaders.h  DynamicPatchSphere.cpp  DynamicPatchSphere.h  FlatAssets.h  FlatDrawable.cpp  FlatDrawable.h  FrameBufferObject.cpp  FrameBufferObject.h  Game.sln  Game.vcxproj  Geometry.cpp  Geometry.h  ImageLoader.cpp  ImageLoader.h  Light.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  NormalShader.cpp  NormalShader.h  ParticleSimulator.cpp  ParticleSimulator.h  PatchSphereRenderer.cpp  PatchSphereRenderer.h  Quaternion.h  README.md  Refcounted.h  RenderBufferObject.cpp  RenderBufferObject.h  SkyBox.cpp  (+41 more)
assets/: angular fighter.mtl  angular fighter.xcf  cube.3ds  cube.blend  cube.blend1  drone.blend  drone.blend1  fighter ship.blend  fighter.blend  fighter.mtl  hexagon.blend  jet intake.blend  missile.mtl  organic ship split.blend  organic ship.blend  shuttle.3ds  shuttle.blend  shuttle.blend1  shuttle.blend2  shuttlebaked.blend  shuttlebaked.blend1  shuttlemaps.xcf
assimp--3.0.1270-source-only/: assimp.vcxproj
assimp-3.1.1/: .gitignore  ALL_BUILD.vcxproj  INSTALL.vcxproj  ZERO_CHECK.vcxproj  assimp.vcxproj  uninstall.vcxproj
assimp-3.1.1/code/: INSTALL.vcxproj  assimp.vcxproj
assimp-3.1.1/contrib/zlib/: ALL_BUILD.vcxproj  CTestTestfile.cmake  INSTALL.vcxproj  (+1 more)
assimp-build/: revision.h
freetype-2.6.3/: freetype.vcxproj
freetype-gl/: CMakeLists.txt  freetype-gl.vcxproj  makefont.c  platform.c  platform.h
glew/: CMakeLists.txt  glew.c  glew.vcxproj
glfw/: glfw.vcxproj
glfw/src/: glfw_config.h
glsl/: asteroid.frag  asteroid.vert  billboard.geom  bloom.frag  color.frag  crater.frag  deferredLight.frag  deferredModel.frag  displace.vert  drawParticle.frag  drawParticle.vert  feedbackdisplace2.vert  flatNormals.geom  hdr.frag  lava.frag  lighting.frag  model.frag  model.vert  mvpNormals.vert  mvpnorm.vert  particleFeedback.vert  procedural smooth lava.frag  simple.frag  ssnormals.geom  star.frag  star.vert  stars.frag  terrain.tcs  terrain.tes  terrain.vert  uniformMaterialDeferred.frag
include/: AABB.h  Animation.h  Array.h  AssetManager.h  AsteroidRenderer.h  BoneGeometry.h  Camera.h  ContextManager.h  CoreShaders.h  DynamicPatchSphere.h  FlatDrawable.h  FrameBufferObject.h  FrameProcessor.cpp  FrameProcessor.h  GBuffer.h  Geometry.h  HighDynamicRangeResolve.h  ImageLoader.h  IndexUtil.h  MathUtilities.h  Mesh.h  Model.h  PbrRenderer.h  Primitives.h  Property.h  Refcounted.h  Renderer.h  Scene.h  Semaphore.h  Shader.h  SkyBox.h  StarRenderer.h  TessGeometry.h  Text.h  Texture.h  Texture2.h  ThreadPool.h  TransformFeedback.h  Vertex.h  VertexArrayObject.h  (+8 more)
lib/: glew32.exp  glew32.lib  glew32d.exp  glew32d.lib  glew32mx.exp  glew32mx.lib  glew32mxs.lib  glew32s.lib  glew32sd.lib  glfw3.lib  glfw3dll.lib
lz4-r112/: CMakeLists.txt
src/: AABB.cpp  AssetManager.cpp  AsteroidRenderer.cpp  CMakeLists.txt  Camera.cpp  CoreShaders.cpp  DynamicPatchSphere.cpp  FlatDrawable.cpp  FrameBufferObject.cpp  GBuffer.cpp  Geometry.cpp  HighDynamicRangeResolve.cpp  ImageLoader.cpp  MathUtilities.cpp  Mesh.cpp  Model.cpp  Primitives.cpp  Quaternion.cpp  RenderBufferObject.cpp  Scene.cpp  Shader.cpp  SkyBox.cpp  StarRenderer.cpp  TessGeometry.cpp  Text.cpp  Texture.cpp  Texture2.cpp  ThreadPool.cpp  TransformFeedback.cpp  Vertex.cpp  VertexArrayObject.cpp  VertexAttribBuilder.cpp  VertexBuffer.cpp  callbacks.cpp  entrypoint.cpp  escapi.cpp  glCommon.cpp
src/GameEngine/: AbstractEvent.h  CMakeLists.txt  GameEngine.cpp  GameEngine.vcxproj  GameObject.cpp  GameObject.h  Grid.h  PC.cpp
src/PhysicsEngine/: EigenSamples.h  Grid.h  IntegrationMethod.h  Observables.h  PhysicsComponent.cpp  PhysicsEngine.vcxproj  RK4Integrator.h  Tests.cpp  VectorField.h
(+3 files in other folders)
